[tool.poetry]
name = "enviroplusctl"
version = "0.1.0"
description = "An application to poll & display climate statistics on your Enviro+"
authors = ["Martin George <marty@dingo.foo>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
