[tool.poetry]
name = "enviroplusctl"
version = "0.1.0"
description = "An application to poll & display climate statistics on your Enviro+"
authors = ["Martin George <marty@dingo.foo>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bme280 = "^0.7"
ltr559 = "^1.0.0"
vcgencmd = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
